fourth commit error correction

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,9 @@ version: "3.8"
 
 services:
   app:
-    build: .
+    image: vaishnavipitchika/devops-tracker:latest
     container_name: tracker-app
+    restart: always
     ports:
       - "8000:8000"
     environment:
